Div TextArea Paste Fix & OverFlow Fix

--- a/bootstrap-css/light-home.css
+++ b/bootstrap-css/light-home.css
@@ -1647,6 +1647,10 @@ canvas {
 	border: none;
 	resize: none;
 	user-select: none;
+	outline: none;
+	text-align: left;
+	font-size: 16px;
+	overflow-y: scroll;
 }
 
 .my-textarea:focus {
